[package]
name = "migrate-file"
version = "1.0.7"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
clap = { version = "4.1.6", features = ["derive"] }
notify = { version = "5.1.0", features = ["serde"] }
